ui: Fix nspace spacing issue (#10157)
This fixes the spacing bug in nspaces only by only showing Description if the namespace has one, and removing the extra 2 pixel margin of dds for when dts aren't rendered/don't exist.

--- a/ui/packages/consul-ui/app/styles/components/composite-row.scss
+++ b/ui/packages/consul-ui/app/styles/components/composite-row.scss
@@ -15,13 +15,19 @@
 .consul-lock-session-list ul > li:not(:first-child) {
   @extend %with-one-action-row;
 }
-// TODO: This hides the icons-less dt's in the below lists as they don't have
+// TODO: This hides the iconless dt's in the below lists as they don't have
 // tooltips the todo would be to wrap these texts in spans
 .consul-nspace-list > ul > li:not(:first-child) dt,
 .consul-token-list > ul > li:not(:first-child) dt,
 .consul-policy-list > ul li:not(:first-child) dl:not(.datacenter) dt,
 .consul-role-list > ul > li:not(:first-child) dt {
+  @extend %iconless-dt;
+}
+%iconless-dt {
   display: none;
+}
+%iconless-dt + dd {
+  margin-left: 0 !important;
 }
 /* TODO: the service list has a 1px offset */
 .consul-policy-list dl.datacenter dt,
